deployment/kubernetes/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gamestore-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-lb
spec:
  hosts:
  - "*"
  gateways:
  - gamestore-gateway
  http:
  - route:
    - destination:
        host: gamestore-web
        port:
          number: 80
